# xarm

./: .gitignore  Cargo.toml  test.sh
base/amd64/: Cargo.toml
base/amd64/src/: cpuid.rs
base/amd64/src/structures/svm/: vmcb.rs
base/amd64/src/svm/: features.rs
base/mm/: Cargo.toml
base/mm/src/: lib.rs
base/mm/src/mmu/: mod.rs  paging.rs  view.rs
base/mm/src/pmm/: mod.rs
base/mm/src/vmm/: builder.rs
base/uefi/: Cargo.toml
base/uefi/src/: macros.rs
base/uefi/src/types/: base.rs  mod.rs
base/uefi/src/types/protocols/: loaded_image.rs  mod.rs
boot/boot/: Cargo.toml
boot/boot-macros/: Cargo.toml
boot/boot-macros/src/: lib.rs
boot/boot/src/: debug.rs  handoff.rs  lib.rs  mmap.rs
driver/interpreter/: Cargo.toml
driver/interpreter/src/: main.rs
driver/interpreter/src/amba/: apb.rs  mod.rs
driver/vmm/: Cargo.toml
driver/vmm/boot/: Cargo.toml
driver/vmm/boot/loader/: Cargo.toml
driver/vmm/boot/macros/: Cargo.toml
driver/vmm/boot/src/: lib.rs
driver/vmm/src/: main.rs
env/: debug.gdb
env/qemu_ovmf/: create_disk.sh  run_qemu.sh  upload_efi.sh
env/qemu_ovmf/ovmf/: README.md
xarm/: Cargo.toml
xarm/decoder/: build.rs
xarm/decoder/examples/: perf_loop.rs
xarm/decoder/isa-gen-nostd/src/: lib.rs
xarm/decoder/isa-gen/src/: lib.rs
xarm/decoder/src/: lib.rs
xarm/frontend/decoder/: Cargo.toml  README.md  build.rs
xarm/frontend/decoder/examples/: perf_loop.rs
xarm/frontend/decoder/isa-gen/: Cargo.toml
xarm/frontend/decoder/isa-gen-nostd/: Cargo.toml
xarm/frontend/decoder/src/: lib.rs
xarm/src/: main.rs
(+40 files in other folders)
