[workspace]
members = [
	"driver/vmm",
    "driver/vmm/hal/amd64",
    "driver/vmm/hal/mm",
    "driver/vmm/boot",
	"driver/interpreter",
    "xarm/frontend/decoder",
    "xarm/frontend/decoder/isa-gen",
    "xarm/frontend/decoder/isa-gen-nostd",
    "xarm/frontend/cfg",
]
resolver = "2"

[profile.release]
debug=true

